--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -23,7 +23,8 @@
 
   .explore-restaurant {
     font-size: 16px;
-    margin-bottom: 5px
+    margin-bottom: 5px;
+    width: 15%;
   }
 
   .title-h1,
@@ -31,17 +32,13 @@
     width: 100%;
   }
 
-#h1-margin {
-  margin-left: auto;
-}
+  #h1-margin {
+    margin-left: auto;
+  }
 
   .title-h1 {
     font-size: 24px;
     font-weight: 700;
-  }
-
-  .explore-restaurant {
-    width: 15%;
   }
 
   #second-section {
@@ -60,10 +57,11 @@
     display: flex;
     flex-direction: row;
     gap: 25px;
-    align-items: center; /*avec ces 2 proprités aligns items et justify-content, les éléments se placent au milieu de la page*/
+    align-items: center;
+    /*avec ces 2 proprités aligns items et justify-content, les éléments se placent au milieu de la page*/
     justify-content: center;
     width: 85%;
-}
+  }
 
   /******Troiséme section, restaurants et nom des menus*******/
 
@@ -152,12 +150,11 @@
     width: 90%;
   }
 
-  .flex-choice {  /*semble en trop*/
+  .flex-choice {
+    /*semble en trop*/
     width: 323px;
     gap: 25px;
   }
-
-  
 
   .restaurants {
     display: flex;
@@ -168,9 +165,13 @@
     margin-right: auto;
   }
 
-.title {
-  font-size: 18px;
-}
+  .title {
+    font-size: 18px;
+  }
+
+  .paragraph {
+    font-size: 17px;
+  }
 
   .backround-card {
     width: 45%;
@@ -179,16 +180,13 @@
     margin-top: 5%;
   }
 
+  .heart {
+    margin-right: 15px;
+  }
+
   .pictures {
     width: 100%;
-
   }
-
-  .new {
-    position: relative;
-    right: 0;
-  }
-
 
   .fas.fa-heart {
     display: flex;
