--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -60,7 +60,7 @@
     align-items: center;
     /*avec ces 2 proprités aligns items et justify-content, les éléments se placent au milieu de la page*/
     justify-content: center;
-    width: 85%;
+    width: 98%;
   }
 
   /******Troiséme section, restaurants et nom des menus*******/
@@ -143,7 +143,7 @@
   }
 
   .title-restaurant {
-    margin: 15px 80px;
+    margin: 30px;
     margin-left: 210px;
     font-size: 24px;
     font-weight: 700;
@@ -160,10 +160,11 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0 140px;
-    gap: 30px;
+    column-gap: 80px;
     margin-left: auto;
     margin-right: auto;
-  }
+    row-gap: 30px;
+}
 
   .title {
     font-size: 18px;
@@ -177,7 +178,8 @@
     width: 45%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5%;
+    margin-top: 0;
+    margin-bottom: 10px;
   }
 
   .heart {
@@ -200,6 +202,7 @@
     padding: 2%;
     flex-direction: row;
     justify-content: flex-end;
+    margin-top: 3%;
   }
 
   .footer-reverse {
