--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -199,10 +199,10 @@
   }
 
   footer {
-    padding: 2%;
     flex-direction: row;
     justify-content: flex-end;
     margin-top: 3%;
+    padding: 60px 55px 30px
   }
 
   .footer-reverse {
@@ -217,7 +217,7 @@
 
   .flex-info {
     flex-direction: row;
-    column-gap: 50px;
+    column-gap: 20px;
     margin: unset;
   }
 
