--- a/css/home-desktop.css
+++ b/css/home-desktop.css
@@ -208,6 +208,7 @@
   .footer-reverse {
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
   }
 
   .white-logo {
@@ -221,7 +222,9 @@
     margin: unset;
   }
 
-
+.margin-mention {
+  margin-left: 35px;
+}
 
 
 
