--- a/css/menu-desktop.css
+++ b/css/menu-desktop.css
@@ -28,5 +28,6 @@
         /*Pour centrer tous les menus*/
         margin-left: 200px;
         margin-right: 200px;
+        padding-bottom: 20px
     }
 }
