--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -32,7 +32,7 @@ h3 {
   left: 0;
   right: 0;
   animation: 3s hidewrapper forwards;
-  background-color:#89C8FA;
+  background-color:rgb(156, 150, 150);;
   opacity: 0.8;
   z-index: 100000;
   color: #ffffff;
@@ -142,7 +142,7 @@ main {
   padding: 15px;
   cursor: pointer;
   font-size: 14px;
-  margin-bottom: 5%;
+  
 }
 
 .explore-restaurant:hover {
@@ -249,15 +249,12 @@ margin: 5%;
     box-shadow: 0px 4px 15px #aaaaaa;
     padding-bottom: 1%;
     position: relative;
- 
 }
 
 .a-third-section {
   text-decoration: none;  /*enléve les traits du dessous*/
   color: black;
 }
-
-
 
 .pictures {
   width: 100%;
