--- a/css/menu-tablette.css
+++ b/css/menu-tablette.css
@@ -3,16 +3,26 @@
 
 @media all and (min-width: 768px) and (max-width: 1240px) {
 
+.choice-menu {
+background-color:#ebe6f0;
+}
+
+.explore-restaurant {
+    width: 30%;
+    background: linear-gradient(193.33deg, #c9afe9 -11.44%, #da96c6 123.93%);
+    color: black;
+}
 
 
+.white-logo {
+    color: black;
+}
 
+footer {
+    background-color:#d7f1eb;;
+}
 
-
-
-
-
-
-
-
-
+footer a {
+    color: black;
+}
 }
