--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -274,7 +274,7 @@ margin: 5%;
     color: #2c9c81;
     font-size: 14px;
     font-weight: 600;
-    font-family: "roboto" sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .flex-menu {    /*Pour que les coeurs se trouvent à coté à droite du  titre et du paragraphe(qui eux, sont l'un en dessous de l'autre)*/
