--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -364,5 +364,5 @@ footer a {
   cursor: pointer;
 }
 
-/*******************************Fin code css pour la page index.html**********************/
+/*******************************Fin code css pour la page index.html en version mobile**********************/
 
