--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -1,4 +1,4 @@
-/***Feuille de style menu-mobile.css projet 4 Ohmyfood Mobile First***/
+/***Feuille de style menu-mobile.css projet 4 Ohmyfood Mobile First***/ /***Pour les quatres restaurants***/
 /***J'intégre d'abord la version mobile puis tablette puis desktop***/
 
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
