--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -10,16 +10,17 @@ html {
 }
 
 body,
-html {
+html,
+h2,
+h3 {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
 
-h1,
-h2,
-h3 {
-  font-family: "roboto", sans-serif;
+h1 /*logo du footer*/
+{
+  font-family: "shrikhand";
 }
 
 /****Loading spinner****/
