--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -20,7 +20,7 @@ h3 {
   font-family: "Roboto", sans-serif;
 }
 
-h1  /*logo du footer*/
+h1  /*logo du footer, tous les autres c'est roboto*/
 {
   font-family: "shrikhand";
 }
