--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -246,9 +246,9 @@ margin: 5%;
     cursor: pointer;
     border-radius: 15px;
     background: white;
-    box-shadow: 0px 4px 15px #aaaaaa;
     padding-bottom: 1%;
     position: relative;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 .a-third-section {
@@ -298,7 +298,8 @@ padding: 0 10px;
   font-size: 30px;
   position: relative;
   cursor: pointer;
-  height: 60px; /*pour s'aligner avec le nom du restaurant*/
+  height: 52px; /*pour s'aligner avec le nom du restaurant*/
+  font-size: 25px;
 }
 
 .fas.fa-heart {   /*full*//***Le remplissage noire est en display none et est suppeposé sur le heart empty*/
