--- a/css/menu-tablette.css
+++ b/css/menu-tablette.css
@@ -1,6 +1,32 @@
 /*******************************************BREAKPOINTS************************************************/
 /*************Feuille de style menu-tablette.css projet 4 Ohmyfood Mobile First / Version tablette*****************/
 
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+/***On peut mettre ce lien de google font (police d'écriture) soit ds le CSS soit ds le html***/
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+
+html {
+  text-size-adjust: 100%;
+  /* Determine ajustement taille police par rapport à sa taille initiale*/
+  font-size: 100%;
+  /*Tous mes éléments utilisant l’unité de mesure REM, auront une taille relative à cette taille (100% dans le cas présent)*/
+}
+
+body,
+html,
+h3 {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+h1  /*logo du footer, tous les autres c'est roboto*/
+{
+  font-family: "shrikhand";
+}
+
+
+
 @media all and (min-width: 768px) and (max-width: 1240px) {
 
 header,
