--- a/css/menu-desktop.css
+++ b/css/menu-desktop.css
@@ -2,6 +2,30 @@
 /*********version desktop feuille de style menu-desktop.css*************/
 
 /**************************** @media 1240px *************************/
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+/***On peut mettre ce lien de google font (police d'écriture) soit ds le CSS soit ds le html***/
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+
+html {
+  text-size-adjust: 100%;
+  /* Determine ajustement taille police par rapport à sa taille initiale*/
+  font-size: 100%;
+  /*Tous mes éléments utilisant l’unité de mesure REM, auront une taille relative à cette taille (100% dans le cas présent)*/
+}
+
+body,
+html,
+h3 {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+
+h1  /*logo du footer, tous les autres c'est roboto*/
+{
+  font-family: "shrikhand";
+}
+
 
 @media all and (min-width: 1240px) {
     .name-restaurants {
