--- a/css/home-mobile.css
+++ b/css/home-mobile.css
@@ -319,7 +319,7 @@ footer {
   padding: 5%;
   display: flex;  /*Je mets dispay: flex pour pouvoir le positionner en row en version desktop*/
   flex-direction: column;
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   line-height: 1.5;
 }
 
